add links to play/test

--- a/views/index.erb
+++ b/views/index.erb
@@ -6,5 +6,8 @@
   </head>
   <body>
     Bookmark list:
+    <a href="/bookmarks">See Bookmarks</a>
+    <a href="/add_bookmark">Add Bookmark</a>
+
   </body>
 </html>
