--- a/views/add.erb
+++ b/views/add.erb
@@ -1,3 +1,5 @@
+<a href="/">Back to Home</a>
+
 <form action="/add" method="post">
   <input type="text" name="url_box" >
   <input type="submit" value="Submit">
